--- a/Sales.ipynb
+++ b/Sales.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "81fd04bf",
+   "id": "50d56644",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b43d7ba9",
+   "id": "c6e9263b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e67226d",
+   "id": "f5e4806d",
    "metadata": {},
    "source": [
     "### Task #1: Merge the 12 months of sales data into a single CSV file"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "beab44f5",
+   "id": "d6db2a2d",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7eb264f1",
+   "id": "ec59a1fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5ddbfe10",
+   "id": "ad09b6b0",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f1b13116",
+   "id": "4b985c50",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd2df7e",
+   "id": "9e6f01e1",
    "metadata": {},
    "source": [
     "## Task #2 : what was the best month for sales? How much was earned that month?"
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f542c4ad",
+   "id": "bd41cc57",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3a30892f",
+   "id": "a3496620",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "086fda3f",
+   "id": "afb305bf",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a1c84b52",
+   "id": "dd649172",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d9922faa",
+   "id": "0cba6799",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9bfb6ecb",
+   "id": "3dcd4028",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ecad0b69",
+   "id": "03c921af",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d3ae913a",
+   "id": "a1aa71cb",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "072d0206",
+   "id": "3d6d267f",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4452a264",
+   "id": "89658e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4a8f1d15",
+   "id": "6d64e14c",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a1e4fba8",
+   "id": "2f504db5",
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af0883ba",
+   "id": "0853c0cc",
    "metadata": {},
    "source": [
     "### Task 2 answer is December with sales of 4.613443e+06"
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5e852fd7",
+   "id": "b39eb759",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4d99370",
+   "id": "e1253dc4",
    "metadata": {},
    "source": [
     "### #Now Check the correlation between different features"
@@ -1375,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3eb853f8",
+   "id": "c6506177",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "44a1872b",
+   "id": "1b5b0c2d",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b2a254bd",
+   "id": "59f37cec",
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1812,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7948447d",
+   "id": "a298cae6",
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1865,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "42a40fa6",
+   "id": "4dd0c259",
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ded6a4",
+   "id": "88e7e687",
    "metadata": {},
    "source": [
     "## Task #3: What city had the highest number of sales?"
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "9c15686e",
+   "id": "474ab36f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "26f94613",
+   "id": "eaf61eef",
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "141cae0f",
+   "id": "d7e6e511",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "eff6adcc",
+   "id": "f7519df9",
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0dbcfe83",
+   "id": "43dd6fd4",
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2325,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b41f44ef",
+   "id": "873c4aea",
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e585db72",
+   "id": "11c252a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2362,7 +2362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a39a967e",
+   "id": "b70ca587",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2370,14 +2370,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d22ddbc",
+   "id": "99d4a497",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "9d823aea",
+   "id": "db504cb2",
    "metadata": {},
    "source": [
     "## Task #3: What time should we display advertisements to maxzimize the likeihood of customers buying product?"
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c9874591",
+   "id": "5fd634d3",
    "metadata": {},
    "outputs": [
     {
@@ -2419,7 +2419,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3149b204",
+   "id": "8a93297f",
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "22080714",
+   "id": "e07dd521",
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "940a26a7",
+   "id": "41805440",
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0ff44894",
+   "id": "d8b01f5f",
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a7b16a1d",
+   "id": "59f6d338",
    "metadata": {},
    "outputs": [
     {
@@ -3064,7 +3064,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "69552c93",
+   "id": "dfd4452f",
    "metadata": {},
    "outputs": [
     {
@@ -3092,7 +3092,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8763625d",
+   "id": "adee2d3c",
    "metadata": {},
    "outputs": [
     {
@@ -3360,14 +3360,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52e3046",
+   "id": "a8c86f8f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "10308936",
+   "id": "53768e82",
    "metadata": {},
    "source": [
     "## Task #4: what products are most often sold together?"
@@ -3376,7 +3376,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "63b203b9",
+   "id": "fe155a39",
    "metadata": {},
    "outputs": [
     {
@@ -3517,7 +3517,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1810553b",
+   "id": "f6a34075",
    "metadata": {},
    "outputs": [
     {
@@ -3738,7 +3738,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f779e24b",
+   "id": "fef71f50",
    "metadata": {},
    "outputs": [
     {
@@ -3759,7 +3759,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4c7356b7",
+   "id": "07f318b1",
    "metadata": {},
    "outputs": [
     {
@@ -4000,7 +4000,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b77a3e21",
+   "id": "a6921865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4010,7 +4010,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "800997c8",
+   "id": "e167e915",
    "metadata": {},
    "outputs": [
     {
@@ -4128,7 +4128,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1df797d0",
+   "id": "3d3e4c7c",
    "metadata": {},
    "outputs": [
     {
@@ -4207,7 +4207,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "58d8042e",
+   "id": "7b48eafc",
    "metadata": {},
    "outputs": [
     {
@@ -4288,7 +4288,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "13b0accf",
+   "id": "27ed86cc",
    "metadata": {},
    "outputs": [
     {
@@ -4410,7 +4410,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e589f042",
+   "id": "12c1be8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4420,7 +4420,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "458db49a",
+   "id": "d5b74576",
    "metadata": {},
    "outputs": [
     {
@@ -4442,7 +4442,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "61479344",
+   "id": "bac47821",
    "metadata": {},
    "outputs": [
     {
@@ -4472,9 +4472,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1dfb8bb5",
+   "metadata": {},
+   "source": [
+    "## The End"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e3c4cf",
+   "id": "8e3cec48",
    "metadata": {},
    "outputs": [],
    "source": []
