--- a/Sales.ipynb
+++ b/Sales.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "50d56644",
+   "id": "85c5482e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c6e9263b",
+   "id": "bae34c0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e4806d",
+   "id": "b3f6d382",
    "metadata": {},
    "source": [
     "### Task #1: Merge the 12 months of sales data into a single CSV file"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6db2a2d",
+   "id": "eee9e6ff",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ec59a1fc",
+   "id": "10cba23a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ad09b6b0",
+   "id": "bad37c19",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4b985c50",
+   "id": "c06678f7",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6f01e1",
+   "id": "7dc68ea5",
    "metadata": {},
    "source": [
     "## Task #2 : what was the best month for sales? How much was earned that month?"
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bd41cc57",
+   "id": "98214cbf",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a3496620",
+   "id": "29680016",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "afb305bf",
+   "id": "dcd43f0f",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd649172",
+   "id": "9f993052",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0cba6799",
+   "id": "b7ae59ea",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3dcd4028",
+   "id": "ccc7c5e0",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "03c921af",
+   "id": "b0df833e",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a1aa71cb",
+   "id": "aa9af0b3",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3d6d267f",
+   "id": "fd0ff852",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "89658e4a",
+   "id": "28f9ea2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6d64e14c",
+   "id": "65fc974c",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2f504db5",
+   "id": "446cda45",
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0853c0cc",
+   "id": "0b59f10d",
    "metadata": {},
    "source": [
     "### Task 2 answer is December with sales of 4.613443e+06"
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b39eb759",
+   "id": "5c700a7a",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1253dc4",
+   "id": "e77a6755",
    "metadata": {},
    "source": [
     "### #Now Check the correlation between different features"
@@ -1375,7 +1375,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c6506177",
+   "id": "ce024b40",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1b5b0c2d",
+   "id": "e6afc814",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "59f37cec",
+   "id": "cef8e57a",
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1812,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a298cae6",
+   "id": "8d454a24",
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1865,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4dd0c259",
+   "id": "3b582871",
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88e7e687",
+   "id": "396c6c5f",
    "metadata": {},
    "source": [
     "## Task #3: What city had the highest number of sales?"
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "474ab36f",
+   "id": "d1affe31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eaf61eef",
+   "id": "97251f37",
    "metadata": {},
    "outputs": [
     {
@@ -2040,7 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d7e6e511",
+   "id": "8144f042",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f7519df9",
+   "id": "88f4b03d",
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "43dd6fd4",
+   "id": "7021bd97",
    "metadata": {},
    "outputs": [
     {
@@ -2325,7 +2325,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "873c4aea",
+   "id": "10f03efa",
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c252a6",
+   "id": "5ae77848",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2362,7 +2362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b70ca587",
+   "id": "ce6f8834",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2370,14 +2370,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d4a497",
+   "id": "8fca9e80",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "db504cb2",
+   "id": "48518779",
    "metadata": {},
    "source": [
     "## Task #3: What time should we display advertisements to maxzimize the likeihood of customers buying product?"
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5fd634d3",
+   "id": "b7fe7760",
    "metadata": {},
    "outputs": [
     {
@@ -2419,7 +2419,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "8a93297f",
+   "id": "7f50c4b5",
    "metadata": {},
    "outputs": [
     {
@@ -2493,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e07dd521",
+   "id": "ce8270a4",
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2629,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "41805440",
+   "id": "647d1fce",
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d8b01f5f",
+   "id": "d225a28b",
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "59f6d338",
+   "id": "7492749a",
    "metadata": {},
    "outputs": [
     {
@@ -3064,7 +3064,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "dfd4452f",
+   "id": "4b25b599",
    "metadata": {},
    "outputs": [
     {
@@ -3092,7 +3092,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "adee2d3c",
+   "id": "13f813c4",
    "metadata": {},
    "outputs": [
     {
@@ -3360,14 +3360,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8c86f8f",
+   "id": "8ad6aa34",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "53768e82",
+   "id": "d1578c7c",
    "metadata": {},
    "source": [
     "## Task #4: what products are most often sold together?"
@@ -3376,7 +3376,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "fe155a39",
+   "id": "0092fe37",
    "metadata": {},
    "outputs": [
     {
@@ -3517,7 +3517,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f6a34075",
+   "id": "a11e99aa",
    "metadata": {},
    "outputs": [
     {
@@ -3738,7 +3738,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fef71f50",
+   "id": "5d04b180",
    "metadata": {},
    "outputs": [
     {
@@ -3759,7 +3759,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "07f318b1",
+   "id": "99d11eae",
    "metadata": {},
    "outputs": [
     {
@@ -4000,7 +4000,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "a6921865",
+   "id": "9a7cb6ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4010,7 +4010,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "e167e915",
+   "id": "6b374ee8",
    "metadata": {},
    "outputs": [
     {
@@ -4128,7 +4128,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3d3e4c7c",
+   "id": "5e91aafa",
    "metadata": {},
    "outputs": [
     {
@@ -4207,7 +4207,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "7b48eafc",
+   "id": "b6a22966",
    "metadata": {},
    "outputs": [
     {
@@ -4288,7 +4288,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "27ed86cc",
+   "id": "8429a03a",
    "metadata": {},
    "outputs": [
     {
@@ -4410,7 +4410,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "12c1be8e",
+   "id": "975fe24c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4420,7 +4420,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d5b74576",
+   "id": "aa9558f2",
    "metadata": {},
    "outputs": [
     {
@@ -4442,7 +4442,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bac47821",
+   "id": "77c00778",
    "metadata": {},
    "outputs": [
     {
@@ -4473,16 +4473,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dfb8bb5",
+   "id": "28911a81",
    "metadata": {},
    "source": [
-    "## The End"
+    "## To Be Continued..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e3cec48",
+   "id": "869a95a4",
    "metadata": {},
    "outputs": [],
    "source": []
